--- a/action.yaml
+++ b/action.yaml
@@ -43,6 +43,8 @@ runs:
       working-directory: ${{ inputs.working-directory }}
       shell: bash
       run: npm ci
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
     - name: Update Version
       shell: bash
