--- a/action.yaml
+++ b/action.yaml
@@ -42,6 +42,9 @@ runs:
         node-version: '16.x'
         registry-url: 'https://registry.npmjs.org'
 
+    - name: Authenticate with private NPM package
+      run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }} @fortawesome:registry=https://npm.fontawesome.com/ //npm.fontawesome.com/:_authToken=${{ secrets.FA_NPM_TOKEN }}" > ~/.npmrc
+
     - name: Install Dependencies
       working-directory: ${{ inputs.working-directory }}
       shell: bash
