--- a/action.yaml
+++ b/action.yaml
@@ -33,11 +33,17 @@ runs:
         git config --global user.name "${{ inputs.github-user }}"
 
     - name: Checkout Code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         ref: ${{ inputs.github-ref }}
         token: ${{ inputs.github-token }}
         fetch-depth: 0
+
+    - name: Install node
+      uses: actions/setup-node@v4
+      with:
+        node-version: 19
+        registry-url: 'https://registry.npmjs.org'
 
     - name: Install Dependencies
       working-directory: ${{ inputs.working-directory }}
